kustomizations/softwarefactoryaddons/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jira
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: confluence
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    istio-injection: enabled
