kustomizations/softwarefactoryaddons/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  gateways:
    - istio-system/public
  hosts:
    - jenkins.bigbang.dev
  http:
    - route:
        - destination:
            host: jenkins.jenkins.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: artifactory
  namespace: artifactory
spec:
  gateways:
    - istio-system/public
  hosts:
    - artifactory.bigbang.dev
  http:
    - route:
        - destination:
            host: artifactory.artifactory.svc.cluster.local
            port:
              number: 8081
