kustomizations/softwarefactoryaddons/base/networkpolicy.yaml
apiVersion: "networking.k8s.io/v1"
kind: NetworkPolicy
metadata:
  name: allow-to-postgres-minio
  namespace: artifactory
spec:
  egress:
    - ports:
        - port: 80
          protocol: TCP
        - port: 9000
          protocol: TCP
        - port: 9090
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres-minio
  podSelector: {}
  policyTypes:
    - Egress
---
apiVersion: "networking.k8s.io/v1"
kind: NetworkPolicy
metadata:
  name: allow-to-postgres-minio
  namespace: confluence
spec:
  egress:
    - ports:
        - port: 80
          protocol: TCP
        - port: 9000
          protocol: TCP
        - port: 9090
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres-minio
  podSelector: {}
  policyTypes:
    - Egress
---
apiVersion: "networking.k8s.io/v1"
kind: NetworkPolicy
metadata:
  name: allow-to-postgres-minio
  namespace: jira
spec:
  egress:
    - ports:
        - port: 80
          protocol: TCP
        - port: 9000
          protocol: TCP
        - port: 9090
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres-minio
  podSelector: {}
  policyTypes:
    - Egress
